[gd_scene load_steps=13 format=4 uid="uid://bimxiu4qal2jp"]

[ext_resource type="Texture2D" uid="uid://88dws7nqapr" path="res://Sprites/Tiles/BrittleHeart_Placeholder_Tiles.png" id="1_0hvgt"]
[ext_resource type="Texture2D" uid="uid://bawbby34an5l1" path="res://Sprites/Lizard/BrittleheartLizard.png" id="2_e3j5j"]
[ext_resource type="Texture2D" uid="uid://nh4ey2muxt0w" path="res://icon.svg" id="2_ej8y6"]
[ext_resource type="Script" path="res://character_body_2d.gd" id="2_h45im"]
[ext_resource type="Script" path="res://heart_container.gd" id="2_p0klu"]
[ext_resource type="Script" path="res://character_data.gd" id="4_054vt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lvucq"]
texture = ExtResource("1_0hvgt")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
1:0/0/custom_data_0 = true
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
2:0/0/custom_data_0 = true
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
3:0/0/terrains_peering_bit/right_side = 0
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/custom_data_0 = true
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/left_side = 0
4:0/0/custom_data_0 = true
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/left_side = 0
5:0/0/custom_data_0 = true
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
6:0/0/custom_data_0 = true
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
8:0/0/terrains_peering_bit/bottom_right_corner = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/bottom_left_corner = 0
8:0/0/custom_data_0 = true
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/top_side = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
7:1/0/terrains_peering_bit/right_side = 0
7:1/0/terrains_peering_bit/bottom_right_corner = 0
7:1/0/terrains_peering_bit/top_right_corner = 0
7:1/0/custom_data_0 = true
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_side = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrain = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
9:1/0/terrains_peering_bit/bottom_left_corner = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_left_corner = 0
9:1/0/custom_data_0 = true
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/custom_data_0 = true
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/terrain = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0/terrains_peering_bit/top_left_corner = 0
8:2/0/terrains_peering_bit/top_side = 0
8:2/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.76734, 8, -5.81153, 8, 8, -8, 8)
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/custom_data_0 = true

[sub_resource type="TileSet" id="TileSet_gwmp5"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
custom_data_layer_0/name = "Mantleable"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_lvucq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cwvnk"]
size = Vector2(12, 27.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_yb2ig"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e3j5j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_bm4uw"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="CircleShape2D" id="CircleShape2D_qbcij"]
radius = 7.07107

[node name="Node2D" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFAAcAAAAGAAIAAAAGAAcAAAAEAAAAAAAHAAcAAAAEAAAAAAAIAAcAAAAEAAAAAAAJAAcAAAAEAAAAAAAKAAcAAAAIAAEAAAALAAcAAAAEAAAAAAAMAAcAAAAEAAAAAAANAAcAAAAEAAAAAAAOAAcAAAAHAAIAAAAQAAcAAAAAAAAAAAARAAcAAAACAAAAAAARAAgAAAACAAIAAAAQAAgAAAAAAAIAAAAKAAYAAAACAAEAAAAKAAUAAAABAAAAAAA=")
tile_set = SubResource("TileSet_gwmp5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(111, 12)

[node name="Hearts" type="Node2D" parent="Camera2D"]
script = ExtResource("2_p0klu")

[node name="Heart1" type="Sprite2D" parent="Camera2D/Hearts"]
position = Vector2(-167, -78)
scale = Vector2(0.095, 0.095)
texture = ExtResource("2_ej8y6")

[node name="Heart2" type="Sprite2D" parent="Camera2D/Hearts"]
position = Vector2(-154, -78)
scale = Vector2(0.095, 0.095)
texture = ExtResource("2_ej8y6")

[node name="Heart3" type="Sprite2D" parent="Camera2D/Hearts"]
position = Vector2(-140.92, -77.92)
scale = Vector2(0.095, 0.095)
texture = ExtResource("2_ej8y6")

[node name="Heart4" type="Sprite2D" parent="Camera2D/Hearts"]
position = Vector2(-127.92, -77.92)
scale = Vector2(0.095, 0.095)
texture = ExtResource("2_ej8y6")

[node name="Heart5" type="Sprite2D" parent="Camera2D/Hearts"]
position = Vector2(-114.92, -77.92)
scale = Vector2(0.095, 0.095)
texture = ExtResource("2_ej8y6")

[node name="Player" type="CharacterBody2D" parent="." node_paths=PackedStringArray("tile_map")]
position = Vector2(111, 12)
script = ExtResource("2_h45im")
friction = 0.05
tile_map = NodePath("../TileMapLayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 2.25)
shape = SubResource("RectangleShape2D_cwvnk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_yb2ig")

[node name="MantleDetector" type="Area2D" parent="Player"]
script = SubResource("GDScript_bm4uw")

[node name="MantleDetectorShape" type="CollisionShape2D" parent="Player/MantleDetector"]
position = Vector2(7, -12)
shape = SubResource("CircleShape2D_qbcij")

[node name="StateContainer" type="Node2D" parent="Player"]
unique_name_in_owner = true
script = ExtResource("4_054vt")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
z_index = -1
remote_path = NodePath("../../Camera2D")
update_rotation = false
update_scale = false

[connection signal="body_shape_entered" from="Player/MantleDetector" to="Player" method="_on_mantle_detector_body_shape_entered"]
[connection signal="body_shape_exited" from="Player/MantleDetector" to="Player" method="_on_mantle_detector_body_shape_exited"]
